--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.github.golovin47.drawingview:drawingview:1.0.0'
-
+    implementation 'com.github.smarteist:autoimageslider:1.3.9'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 }
